--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Muddatli to'lov kartasi">
     <title>UNIRED</title>
     <link rel="shortcut icon" href="data/image/icon.png" />
     <!-- Latest compiled and minified CSS -->
