main page responsive corrections

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <body>
 
+    <a href="" class="application-btn"><img src="data/image/icons/file-text.png" alt=""></a>
     <!-- navigation -->
     <nav class="navbar navbar-expand-md">
         <div class="container">
