--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Muddatli to'lov kartasi">
+    <meta name="keywords" content="Unired, Universalbank, Unibank, Ubank, Muddatli to'lov, rassrochka">
     <title>UNIRED</title>
     <link rel="shortcut icon" href="data/image/icon.png" />
     <!-- Latest compiled and minified CSS -->
