--- a/index.html
+++ b/index.html
@@ -14,6 +14,40 @@
     <link rel="stylesheet" href="data/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="data/css/owl.carousel.min.css">
     <link rel="stylesheet" href="data/css/style.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179255090-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-179255090-1');
+    </script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(67767403, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true,
+            trackHash: true,
+            ecommerce: "dataLayer"
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/67767403" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Popper JS -->
@@ -362,7 +396,7 @@
                                         </clipPath>
                                     </defs>
                                 </svg>
-    
+
                                 Android uchun yuklash
                             </button>
                         </div>
@@ -381,7 +415,8 @@
             <div class="row">
                 <div class="col-sm-6 order-2 order-sm-1">
                     <p>©2019 «Universalbank» ATB №68-sonli litsеnziya 14.07.2018-yilda bеrilgan</p>
-                    <p>O‘zR MB tomonidan 27.06.2015-y.da Xorijiy valyutada opеratsiyalarni amalga oshirish uchun №77-sonli bosh litsеnziya bеrilgan</p>
+                    <p>O‘zR MB tomonidan 27.06.2015-y.da Xorijiy valyutada opеratsiyalarni amalga oshirish uchun
+                        №77-sonli bosh litsеnziya bеrilgan</p>
                     <ul class="social-icons">
                         <li>
                             <a href="">
@@ -403,7 +438,7 @@
                 <div class="col-sm-6 order-1 order-sm-2 mb-4 mb-sm-0 phone-numbers">
                     <p class="mb-1">Call center</p>
                     <h5>+998 71 200-11-10</h5>
-                    
+
                     <p class="mb-1">Ishonch telefoni ATB "Universalbank":</p>
                     <h5>+998 78 150 39 90</h5>
 
