--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
                 <div class="menu">
                     <ul class="menu-left">
-                        <li><a href="">Bosh sahifa</a></li>
-                        <li><a href="">Aksiyalar</a></li>
+                        <li><a href="index.html" class="active">Bosh sahifa</a></li>
+                        <li><a href="shares.html">Aksiyalar</a></li>
                         <li><a href="">Hamkorlar</a></li>
                         <li><a href="">FAQ</a></li>
                     </ul>
@@ -107,7 +107,6 @@
             <div class="row">
                 <ul>
                     <li><a href="">Mijozlarga</a></li>
-                    <li><a href="">Hamkorlarga</a></li>
                     <li><a href="">Karta olish</a></li>
                     <li><a href="">Hamkor bo'lish</a></li>
                 </ul>
@@ -140,7 +139,6 @@
         <hr>
         <ul>
             <li><a href="">Mijozlarga</a></li>
-            <li><a href="">Hamkorlarga</a></li>
             <li><a href="">Karta olish</a></li>
             <li><a href="">Hamkor bo'lish</a></li>
         </ul>
@@ -175,7 +173,7 @@
                 <div class="shares-left shares-items">
                     <div class="shares-caption">
                         <h5>Iphone XS monile telefoni sizga qulay narxlarda</h5>
-                        <a href="" class="more-btn">Batafsil</a>
+                        <a href="shares.html" class="more-btn">Batafsil</a>
                     </div>
                     <div class="shares-image">
                         <div class="image-overlay"></div>
@@ -186,7 +184,7 @@
                     <div class="shares-items">
                         <div class="shares-caption">
                             <h5>Iphone XS monile telefoni sizga qulay narxlarda</h5>
-                            <a href="" class="more-btn">Batafsil</a>
+                            <a href="shares.html" class="more-btn">Batafsil</a>
                         </div>
                         <div class="shares-image">
                             <div class="image-overlay"></div>
@@ -196,7 +194,7 @@
                     <div class="shares-items">
                         <div class="shares-caption">
                             <h5>Iphone XS monile telefoni sizga qulay narxlarda</h5>
-                            <a href="" class="more-btn">Batafsil</a>
+                            <a href="shares.html" class="more-btn">Batafsil</a>
                         </div>
                         <div class="shares-image">
                             <div class="image-overlay"></div>
@@ -410,6 +408,8 @@
 
     </div>
 
+
+    <!-- footer -->
     <footer class="footer">
         <div class="container">
             <div class="row">
