--- a/info-page.html
+++ b/info-page.html
@@ -167,69 +167,9 @@
         </div>
     </div>
 
-    <div class="image-modal">
-        <div class="modal-overlay"></div>
-        <img class="modal-img" alt="">
-    </div>
-
-    <div class="container shares mb-4">
-        <h4>Онлайн-распродажа от REALME</h4>
+    <div class="container info-page">
         <div class="row">
-            <div class="col-sm-12">
-                <div class="image-block">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="mainImg">
-                                <img src="data/image/sharesim1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="thumbs">
-                                <div class="thumbnails">
-                                    <img class="active" src="data/image/sharesim1.png" alt="">
-                                    <img src="data/image/sharesim2.png" alt="">
-                                    <img src="data/image/sharesim3.png" alt="">
-                                    <img src="data/image/sharesim4.png" alt="">
-                                    <img src="data/image/sharesim4.png" alt="">
-                                    <img src="data/image/sharesim4.png" alt="">
-                                    <img src="data/image/sharesim4.png" alt="">
-                                    <img src="data/image/sharesim4.png" alt="">
-                                    <img src="data/image/sharesim4.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mt-4">
-                        <div class="col-12">
-                            <p>
-                                24 сентября в 16:00 стартует онлайн-продажа смартфона — только один день, только один час на онлайн-покупку на сайте MEDIAPARK.UZ нового смартфона по супер цене!
-                            </p>
-                            <p>При заказе в интернет магазине смартфона REALME C11 вы приобретаете смартфон со скидкой 20%.</p>
-                            <p><b>Условия:</b></p>
-                            <p>
-                                1. Доставка осуществляется после подтверждения заказа покупателем в течении 3х рабочих дней. <br>
-                                2. Заказ, оформленный не в час акции, будет отгружаться по полной стоимости без учета скидки. <br>
-                                3. Время проведения акции 24.09.2020 с 16:00 до 17:00. <br>
-                                4. Количество товаров ограничено. <br>
-                                5. Акция действует только для розничных покупателей и не распространяется на корпоративные продажи и YATT. <br>
-                                6. Ограничения одно физическое лицо может сделать заказ  не более 2 телефонов. 
-                                С условиями доставки в регионы вы можете ознакомиться в разделе "ДОСТАВКА"
-                            </p>
-                            <p><b>Дата:</b> 24-сентябрь</p>
-                            <p><b>Статус:</b> <span style="color:red">Завершено</span></p>
-                            <p class="social-links">
-                                <b>Подробнее в наших соц. сетях:</b>
-                                <a href=""><img src="data/image/icons/facebook.png" alt=""></a>
-                                <a href=""><img src="data/image/icons/instagram.png" alt=""></a>
-                                <a href=""><img src="data/image/icons/telegram 1.png" alt=""></a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-9"></div>
+            
         </div>
     </div>
 
