--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
         <div class="container">
             <div class="row">
                 <ul>
-                    <li><a href="">Mijozlarga</a></li>
+                    <li><a href="info-page.html">Mijozlarga</a></li>
                     <li><a href="">Karta olish</a></li>
                     <li><a href="">Hamkor bo'lish</a></li>
                 </ul>
             </div>
         </div>
     </div>
+    
     <!-- mobile menu navigation -->
     <div class="mobile-menu">
         <button class="close-menu"><img src="data/image/icons/close.svg" alt=""></button>
@@ -131,14 +132,14 @@
         </ul>
         <hr>
         <ul>
-            <li><a href="">Bosh sahifa</a></li>
-            <li><a href="">Aksiyalar</a></li>
+            <li><a href="index.html">Bosh sahifa</a></li>
+            <li><a href="shares.html">Aksiyalar</a></li>
             <li><a href="">Hamkorlar</a></li>
             <li><a href="">FAQ</a></li>
         </ul>
         <hr>
         <ul>
-            <li><a href="">Mijozlarga</a></li>
+            <li><a href="info-page.html">Mijozlarga</a></li>
             <li><a href="">Karta olish</a></li>
             <li><a href="">Hamkor bo'lish</a></li>
         </ul>
