--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <ul class="menu-left">
                         <li><a href="index.html" class="active">Bosh sahifa</a></li>
                         <li><a href="shares.html">Aksiyalar</a></li>
-                        <li><a href="">Hamkorlar</a></li>
-                        <li><a href="">FAQ</a></li>
+                        <li><a href="partners.html">Hamkorlar</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                     </ul>
                     <ul class="menu-right">
                         <li> <img src="data/image/icons/map.svg" alt=""><span id="city"></span></li>
@@ -113,7 +113,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- mobile menu navigation -->
     <div class="mobile-menu">
         <button class="close-menu"><img src="data/image/icons/close.svg" alt=""></button>
@@ -134,8 +134,8 @@
         <ul>
             <li><a href="index.html">Bosh sahifa</a></li>
             <li><a href="shares.html">Aksiyalar</a></li>
-            <li><a href="">Hamkorlar</a></li>
-            <li><a href="">FAQ</a></li>
+            <li><a href="partners.html">Hamkorlar</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
         <hr>
         <ul>
