--- a/faq.html
+++ b/faq.html
@@ -195,9 +195,10 @@
                         <img class="d-block w-100" src="data/image/shares2.png" alt="First slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Новости Нашего Банка</h5>
-                            <p class="mb-4">Хочешь купить подарок родным, но нет денег то купи товар на рассрочку с нашей картой
+                            <p class="my-4">Хочешь купить подарок родным, но нет денег то купи товар на рассрочку с
+                                нашей картой
                                 Unired!</p>
-                                <a href="" class="more-btn">Batafsil</a>
+                            <a href="" class="more-btn">Batafsil</a>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -227,6 +228,54 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row my-5">
+            <div class="col-12">
+                <div id="accordion">
+
+                    <div class="card">
+                        <div class="card-header">
+                            <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                                Как работает UNIRED?
+                            </a>
+                        </div>
+                        <div id="collapseOne" class="collapse" data-parent="#accordion">
+                            <div class="card-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium vitae consectetur ac odio feugiat adipiscing nibh cras quis. Cursus mollis tristique amet diam nullam duis accumsan, quis rhoncus. Arcu eu viverra euismod rhoncus volutpat, ac convallis sed.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+                                Где работает UNIRED?
+                            </a>
+                        </div>
+                        <div id="collapseTwo" class="collapse" data-parent="#accordion">
+                            <div class="card-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium vitae consectetur ac odio feugiat adipiscing nibh cras quis. Cursus mollis tristique amet diam nullam duis accumsan, quis rhoncus. Arcu eu viverra euismod rhoncus volutpat, ac convallis sed.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                                Зачем мне нужна карта UNIRED?
+                            </a>
+                        </div>
+                        <div id="collapseThree" class="collapse" data-parent="#accordion">
+                            <div class="card-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium vitae consectetur ac odio feugiat adipiscing nibh cras quis. Cursus mollis tristique amet diam nullam duis accumsan, quis rhoncus. Arcu eu viverra euismod rhoncus volutpat, ac convallis sed.
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
