--- a/shares-item.html
+++ b/shares-item.html
@@ -217,7 +217,8 @@
                                 6. Ограничения одно физическое лицо может сделать заказ  не более 2 телефонов. 
                                 С условиями доставки в регионы вы можете ознакомиться в разделе "ДОСТАВКА"
                             </p>
-                            <p><b>Дата:</b> 24-сентябрь</p>
+                            <p><b>Дата начало:</b> 24-сентябрь-2020</p>
+                            <p><b> Дата окончания:</b> 10-октябрь-2020</p>
                             <p><b>Статус:</b> <span style="color:red">Завершено</span></p>
                             <p class="social-links">
                                 <b>Подробнее в наших соц. сетях:</b>
