--- a/faq.html
+++ b/faq.html
@@ -193,7 +193,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="data/image/shares2.png" alt="First slide">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption">
                             <h5>Новости Нашего Банка</h5>
                             <p class="my-4">Хочешь купить подарок родным, но нет денег то купи товар на рассрочку с
                                 нашей картой
@@ -203,7 +203,7 @@
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="data/image/shares1.png" alt="Second slide">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption">
                             <h5>Новости Нашего Банка</h5>
                             <p>Хочешь купить подарок родным, но нет денег то купи товар на рассрочку с нашей картой
                                 Unired!</p>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="data/image/shares3.png" alt="Third slide">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption">
                             <h5>Новости Нашего Банка</h5>
                             <p>Хочешь купить подарок родным, но нет денег то купи товар на рассрочку с нашей картой
                                 Unired!</p>
@@ -232,7 +232,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row my-5">
+        <div class="row my-sm-5 my-3">
             <div class="col-12">
                 <div id="accordion">
 
@@ -269,6 +269,19 @@
                             </a>
                         </div>
                         <div id="collapseThree" class="collapse" data-parent="#accordion">
+                            <div class="card-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium vitae consectetur ac odio feugiat adipiscing nibh cras quis. Cursus mollis tristique amet diam nullam duis accumsan, quis rhoncus. Arcu eu viverra euismod rhoncus volutpat, ac convallis sed.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseFour">
+                                Чем карта UNIRED отличается от других форм оплаты?
+                            </a>
+                        </div>
+                        <div id="collapseFour" class="collapse" data-parent="#accordion">
                             <div class="card-body">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium vitae consectetur ac odio feugiat adipiscing nibh cras quis. Cursus mollis tristique amet diam nullam duis accumsan, quis rhoncus. Arcu eu viverra euismod rhoncus volutpat, ac convallis sed.
                             </div>
