--- a/be-partner.html
+++ b/be-partner.html
@@ -412,6 +412,7 @@
                         <img id="imgshow" alt="">
                         <input type="file" id="imgload" hidden required>
                         <label id="logo-label" for="imgload">Select image</label>
+                        <span>Rasm tanlanmadi</span>
                     </div>
                 </div>
                 <div class="col-md-6">
