--- a/captcha.html
+++ b/captcha.html
@@ -105,6 +105,7 @@
         <h2 type="text" id="mainCaptcha"></h2>
         <p><input type="button" id="refresh" onclick="Captcha();" /></p> 
         <input type="text" id="txtInput" onkeyup="console.log(ValidCaptcha())"/>
+        <!-- <input id="Button1" type="button" value="Check" onkeyup="console.log(ValidCaptcha())" /> -->
     </div>
 
 </body>
