--- a/partners.html
+++ b/partners.html
@@ -190,7 +190,30 @@
     <div class="container">
         <div class="row partners-all my-sm-4 my-1 categories-mobile">
             <!-- <div id="categories" class=""></div> -->
-            <ul class="category-list">
+            <ul class="category-list mobile-category-menu">
+                <li><a href="" class="active"><img src="data/image/category-icons/all catagories.png" alt=""> Все партнеры</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 43.png" alt=""> Бытовая техника</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 44.png" alt=""> Одежда и обувь</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 45.png" alt=""> Косметика</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 46.png" alt=""> Интернет магазин</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 47.png" alt=""> Путишествие</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 48.png" alt=""> Товары для дома</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 49.png" alt=""> Мебель</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 50.png" alt=""> Аксессуары для авто</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 51.png" alt=""> Строительные материалы</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 52.png" alt=""> Телефоны</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 49-1.png" alt=""> Компьютеры</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 50-1.png" alt=""> Спортивный инвентарь</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 51-1.png" alt=""> Аренда авто</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 52-1.png" alt=""> Ювелирные изделия</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 53.png" alt=""> Цветы</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 54.png" alt=""> Продукты питания</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 55.png" alt=""> Музыкальные инструменты</a>
+                </li>
+                <li><a href=""><img src="data/image/category-icons/image 56.png" alt=""> Учебный центр</a></li>
+                <li><a href=""><img src="data/image/category-icons/image 57.png" alt=""> Красота и здаровье</a></li>
+            </ul>
+            <ul class="category-list desktop-category-menu">
                 <li><a href="" class="active"><img src="data/image/category-icons/all catagories.png" alt=""> Все партнеры</a></li>
                 <li><a href=""><img src="data/image/category-icons/image 43.png" alt=""> Бытовая техника</a></li>
                 <li><a href=""><img src="data/image/category-icons/image 44.png" alt=""> Одежда и обувь</a></li>
