--- a/be-partner.html
+++ b/be-partner.html
@@ -177,23 +177,23 @@
         <div class="row">
             <h6 class="subtitle">Компания</h6>
         </div>
-        <form action="" name="bePartner" novalidate autocomplete="off">
+        <form action="" autocomplete="off">
             <div class="row">
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required>
+                        <input type="text" required placeholder="some">
                         <label>Название компании</label>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="number" id="innNumber" required>
+                        <input type="number" id="innNumber" required placeholder="some">
                         <label>ИНН</label>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required id="dateOfCreate">
+                        <input type="text" required id="dateOfCreate" placeholder="some">
                         <label>Год основания</label>
                     </div>
                 </div>
@@ -207,19 +207,19 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="number" id="zipcode" required>
+                        <input type="number" id="zipcode" required placeholder="some">
                         <label>Почтовый индекс</label>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required>
+                        <input type="text" required placeholder="some">
                         <label>Город</label>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required id="dateOfCreate">
+                        <input type="text" required placeholder="some">
                         <label>Улица, дом, корпус, офис</label>
                     </div>
                 </div>
@@ -228,19 +228,19 @@
             <div class="row mt-2">
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required>
+                        <input type="text" placeholder="some">
                         <label>Имя</label>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required>
+                        <input type="text" placeholder="some">
                         <label>Фамилия</label>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required id="dateOfCreate">
+                        <input type="text" placeholder="some">
                         <label>Отчество</label>
                     </div>
                 </div>
@@ -249,13 +249,13 @@
             <div class="row mt-2">
                 <div class="col-md-6">
                     <div class="input-group">
-                        <input id="phone-number" name="phone-number" type="text" required maxlength="14" />
+                        <input id="phone-number" name="phone-number" type="text" required maxlength="14"  placeholder="some"/>
                         <label>Телефон +998</label>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <input type="email" id="email" required>
+                        <input type="email" id="email" required placeholder="some">
                         <label>Электронная почта</label>
                     </div>
                 </div>
@@ -266,27 +266,27 @@
                     <h6 class="subtitle">Годовой оборот в национальной валюте (млрд.):</h6>
                     <div class="radio-cards1">
                         <label>
-                            <input type="radio" checked name="budget" class="radio-cards1-input">
+                            <input type="radio" checked name="budget" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 менее 2
                             </div>
                         </label>
 
                         <label>
-                            <input type="radio" name="budget" class="radio-cards1-input">
+                            <input type="radio" name="budget" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 от 2 до 10
                             </div>
                         </label>
                         <label>
-                            <input type="radio" name="budget" class="radio-cards1-input">
+                            <input type="radio" name="budget" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 от 10 до 50
                             </div>
                         </label>
 
                         <label>
-                            <input type="radio" name="budget" class="radio-cards1-input">
+                            <input type="radio" name="budget" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 более 50
                             </div>
@@ -297,27 +297,27 @@
                     <h6 class="subtitle">Количество сотрудников:</h6>
                     <div class="radio-cards1">
                         <label>
-                            <input type="radio" checked name="worker" class="radio-cards1-input">
+                            <input type="radio" checked name="worker" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 от 1 до 9
                             </div>
                         </label>
 
                         <label>
-                            <input type="radio" name="worker" class="radio-cards1-input">
+                            <input type="radio" name="worker" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 от 10 до 49
                             </div>
                         </label>
                         <label>
-                            <input type="radio" name="worker" class="radio-cards1-input">
+                            <input type="radio" name="worker" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 от 50 до 249
                             </div>
                         </label>
 
                         <label>
-                            <input type="radio" name="worker" class="radio-cards1-input">
+                            <input type="radio" name="worker" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 более 250
                             </div>
@@ -329,7 +329,7 @@
             <div class="row mt-0 mt-sm-3">
                 <div class="col-sm-12">
                     <div class="input-group">
-                        <input type="text" required>
+                        <input type="text" required placeholder="some">
                         <label>Основная продукция/услуги компании</label>
                     </div>
                 </div>
@@ -339,19 +339,19 @@
                     <h6 class="subtitle">Область деятельности</h6>
                     <div class="radio-cards1 service-type">
                         <label>
-                            <input type="checkbox" name="production" class="radio-cards1-input">
+                            <input type="checkbox" name="production" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 Производство
                             </div>
                         </label>
                         <label>
-                            <input type="checkbox" name="services" class="radio-cards1-input">
+                            <input type="checkbox" name="services" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 Услуги
                             </div>
                         </label>
                         <label>
-                            <input type="checkbox" name="trade" class="radio-cards1-input">
+                            <input type="checkbox" name="trade" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 Торговля
                             </div>
@@ -362,25 +362,25 @@
                     <h6 class="subtitle">Срок рассрочки</h6>
                     <div class="radio-cards1">
                         <label>
-                            <input type="checkbox" name="3month" class="radio-cards1-input">
+                            <input type="checkbox" name="3month" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 3 месяца
                             </div>
                         </label>
                         <label>
-                            <input type="checkbox" name="6month" class="radio-cards1-input">
+                            <input type="checkbox" name="6month" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 6 месяца
                             </div>
                         </label>
                         <label>
-                            <input type="checkbox" name="9month" class="radio-cards1-input">
+                            <input type="checkbox" name="9month" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 9 месяца
                             </div>
                         </label>
                         <label>
-                            <input type="checkbox" name="12month" class="radio-cards1-input">
+                            <input type="checkbox" name="12month" placeholder="some" class="radio-cards1-input">
                             <div class="radio-cards1-inner">
                                 12 месяца
                             </div>
@@ -392,7 +392,7 @@
             <div class="row mt-0 mt-sm-3">
                 <div class="col-sm-12">
                     <div class="input-group">
-                        <input type="text" required>
+                        <input type="text" required placeholder="some">
                         <label>Сертификаты, лицензии</label>
                     </div>
                 </div>
@@ -410,7 +410,7 @@
                     <h6 class="subtitle">Лого компании</h6>
                     <div class="logo-upload mt-0 mt-sm-3">
                         <img id="imgshow" alt="">
-                        <input type="file" id="imgload" hidden required>
+                        <input type="file" id="imgload" hidden>
                         <label id="logo-label" for="imgload">Select image</label>
                         <span>Rasm tanlanmadi</span>
                     </div>
@@ -419,16 +419,16 @@
                     <h6 class="subtitle mt-sm-3 mt-md-0">Captcha</h6>
                     <div class="captcha">
                         <div class="captcha-text">
-                            <h3 type="text" id="mainCaptcha" onselectstart="return false"></h3>
-                            <p><input type="button" id="refresh" onclick="Captcha();" /></p> 
+                            <h3 type="text" id="mainCaptcha"></h3>
+                            <p><input type="button" id="refresh" onclick="Captcha();" /></p>
                         </div>
-                        <input type="text" id="txtInput" onkeyup="console.log(ValidCaptcha())"/>
+                        <input type="text" id="txtInput" onkeyup="ValidCaptcha()" />
                     </div>
                 </div>
             </div>
             <div class="row mt-5 justify-content-center">
                 <div class="col-12 text-center">
-                    <input disabled='true' id="partnerSubmit" type="submit" class="more-btn" value="Отправить"/>
+                    <input disabled='true' id="partnerSubmit" type="submit" class="more-btn" value="Отправить" />
                 </div>
             </div>
         </form>
