--- a/partners.html
+++ b/partners.html
@@ -128,7 +128,7 @@
                 <ul>
                     <li><a href="info-page.html">Mijozlarga</a></li>
                     <li><a href="">Karta olish</a></li>
-                    <li><a href="">Hamkor bo'lish</a></li>
+                    <li><a href="be-partner.html">Hamkor bo'lish</a></li>
                 </ul>
             </div>
         </div>
