--- a/shares.html
+++ b/shares.html
@@ -108,7 +108,7 @@
                 <ul>
                     <li><a href="info-page.html">Mijozlarga</a></li>
                     <li><a href="">Karta olish</a></li>
-                    <li><a href="">Hamkor bo'lish</a></li>
+                    <li><a href="be-partner.html">Hamkor bo'lish</a></li>
                 </ul>
             </div>
         </div>
@@ -141,7 +141,7 @@
         <ul>
             <li><a href="info-page.html">Mijozlarga</a></li>
             <li><a href="">Karta olish</a></li>
-            <li><a href="">Hamkor bo'lish</a></li>
+            <li><a href="be-partner.html">Hamkor bo'lish</a></li>
         </ul>
     </div>
 
