--- a/check-appl.html
+++ b/check-appl.html
@@ -180,7 +180,7 @@
                             placeholder="some" />
                         <label>Телефон +998</label>
                     </div>
-                    <input id="partnerSubmit" type="submit" class="more-btn my-1" value="Отправить" />
+                    <button id="partnerSubmit" type="submit" class="more-btn my-1"> Отправить </button>
                 </form>
             </div>
         </div>
