--- a/be-partner.html
+++ b/be-partner.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="text" required id="dateOfCreate" placeholder="some">
+                        <input type="text" required id="dateOfCreate" placeholder="some" maxlength="10">
                         <label>Год основания</label>
                     </div>
                 </div>
