--- a/be-partner.html
+++ b/be-partner.html
@@ -187,7 +187,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="input-group">
-                        <input type="number" id="innNumber" required placeholder="some">
+                        <input type="text" id="innNumber" maxlength="9" required placeholder="some">
                         <label>ИНН</label>
                     </div>
                 </div>
