--- a/branches.html
+++ b/branches.html
@@ -57,9 +57,11 @@
     <script src="data/js/owl.carousel.min.js"></script>
     <script src="data/js/index.js"></script>
 
-
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+    <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script> -->
+    <!-- <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' /> -->
+    
+    <script src='data/js/mapbox-gl.js'></script>
+    <link href='data/css/mapbox-gl.css' rel='stylesheet' />
 
     <style>
         #load_text_temp {
