--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
     <script src="data/js/index.js"></script>
 </head>
 
+
 <body>
 
     <a href="" class="application-btn"><img src="data/image/icons/file-text.png" alt=""></a>
     <!-- navigation -->
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
             <div class="row">
 
